main.css
* {
    box-sizing: border-box;
  }
  
  body {
    font-family: 'Roboto', sans-serif;
    background-image: url('images/snow-aspen-mountains.jpeg');
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    z-index: 0; 
    margin: 20px; padding: 0;
  }


  header {
    display: flex;
    justify-content: center;
    align-content: center;
    background-color: black;
    opacity: .8;
    width: auto;
    margin-bottom: 20px;
    padding: 10px;
    border-radius: 20px;
  }

  header h1 {
    color: white;
  }

  .weather-icon {
    align-self: right;
  }

  .container {
    position: relative;
    background-color: rgba(243, 242, 242, 0.88);
    z-index: 1;
    padding: 10px;
    border-radius: 10px;
    max-width: 90%;
    margin: 0 auto;
  }

  .form {
    display: flex;
    position: relative;
    flex-direction: column;
  }

  h2 {
    text-align: center;
    flex-wrap: wrap;
    
  }


  .filters {
    display: flex;
    flex-direction: column;
    align-content: center;
    align-items: center;
  }

  .weather-trails {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: rgba(243, 242, 242, 0.88);
    padding: 10px;
    border-radius: 10px;
    max-width: 90%;
    margin: auto;
    margin-top: 25px;
  }

/*.trails {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 60%;
}*/

  #trail-results {
    width: 62%;
  }

  section {
    margin: 30px;
    align-content: space-around;
  }

  select {
    height: 25px;
    margin-right: 30px;
    margin-bottom: 10px;
  }



  #map {
    position: relative;
    z-index: 4;
    padding: 10px;
    border-radius: 10px;
    min-width: 300px;
    margin: 20px auto;
    min-height: 300px;
  }



  label {
    margin-right: 5px;
  }

  a:hover {
    color: red;
  }

  a:visited {
    color: purple;
  }

  a:link {
    color: royalblue;
    font-weight: bold;
  }

  a:active {
    color: red;
  }

  .title-link {
    font-style: none;
    color: black;
    text-decoration: none;
  }
  
  button, input[type="text"] {
    padding: 5px;
    margin: 10px;
  }

  input[type="radio"] {
    padding: 20px;
  }
  
  /*button:hover {
    cursor: crosshair;
  }*/

  ul {
    list-style: none;
  }

  
  .error-message {
      color: red;
  }
  
  .hidden {
    display: none;
  }





  @media all and (min-width: 600px){
    .weather-trails, .form, .filters {
      flex-direction: row;
    }
     
    #map {
      min-height: 400px;
      min-width: 400px;
      max-width: 600px;
    }
 }

